@@ -1,5 +1,6 @@
 2012-11-10
 * stop processing XZ files as soon as all possible XZ files have been extracted.
+* put extracted XZ files in blacklist
 
 2012-11-04
 * also store line numbers for function names
